--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>cognitivism - intertain.org - investing in our future through digital literacy</title>
+<title>letters</title>
 <link rel="icon" href="icon.png" type="image/png" />
 <link rel="stylesheet" type="text/css" href="css/html5reset.css" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
